# jupyter-mcp-server

./: .gitignore  README.md  README_EN.md  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml
docs/: integration.md  integration_EN.md  prompt_example.md  prompt_example_EN.md  tools.md  tools_EN.md
example/Titanic/: GEMINI.md  Titanic_EDA.ipynb  example_prompt.md  kaggle_article_en.md  kaggle_article_zh.md  pyproject.toml  submission.csv
example/Titanic/data/: Dataset_Description.md
src/: config.toml  server.py
src/better_jupyter_mcp_server/: __init__.py  server.py
src/better_jupyter_mcp_server/utils/: notebook.py
src/utils/: __init__.py  cell.py  formatter.py  notebook.py
utils/: cell.py  formatter.py  notebook.py
