[project]
name = "jupyter-mcp"
version = "0.1.0"
description = "jupyter mcp server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datalayer-pycrdt>=0.12.17",
    "fastmcp>=2.12.2",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=4.1.1",
    "jupyter-kernel-client>=0.8.0",
    "jupyter-nbmodel-client>=0.14.0",
    "jupyterlab>=4.4.7",
    "nbformat>=5.10.4",
    "pillow>=10.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
